[package]
name = "ebnf"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A successor bnf parsing library of bnf parsing library, for parsing Extended Backus–Naur form context-free grammars"
repository = "https://github.com/ChAoSUnItY/ebnf"
readme = "README.md"
keywords = ["ebnf", "bnf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
parse-hyperlinks = "0.23.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.26.0", features = ["yaml"] }
